[ADD] gitignore few changes

--- a/server/.env
+++ b/server/.env
@@ -15,3 +15,5 @@ SPOTIPY_REDIRECT_URI =http://localhost:${PORT}/callback
 CHATGPT_API_KEY = 'ba3e6534f94542cb858884cdb2f49b29'
 CALLR_LOGIN = 'demo'
 CALLR_PASSWORD = 'Demonstration!42!!'
+GITHUB_CLIENT_ID = 'd2d4d091fdfe51ca4f1d'
+GITHUB_CLIENT_SECRET = 'cfb18471df37f0d10c4faa7f213685c835619112'
