--- a/server/.env
+++ b/server/.env
@@ -17,3 +17,4 @@ CALLR_LOGIN = 'demo'
 CALLR_PASSWORD = 'Demonstration!42!!'
 GITHUB_CLIENT_ID = 'd2d4d091fdfe51ca4f1d'
 GITHUB_CLIENT_SECRET = 'cfb18471df37f0d10c4faa7f213685c835619112'
+API_NASA = 'IqSMbgDbwtIIl02AfrV0Lu63rMltseXcKSKgh2Hw'
